# femite-backend

./: .env.example  API_GUIDE.md  Cargo.toml  README.md
migrations/: 20250910154621_create_product.sql  20250911061218_create_categories.sql  20250911062309_create_users.sql  20250911065804_create_carts_and_orders.sql  20250911170000_fix_price_consistency.sql  20250911170001_add_stock_and_payments.sql
scripts/: create_admin.sh
src/: errors.rs  lib.rs  main.rs  openapi.rs  state.rs
src/dtos/: auth.rs  cart.rs  category.rs  mod.rs  order.rs  product.rs
src/middleware/: auth.rs  validation.rs
src/model/: cart.rs  category.rs  mod.rs  order.rs  payment.rs  product.rs  stock.rs  user.rs
src/repository/: cart_repository.rs  category_repository.rs  mod.rs  order_repository.rs  payment_repository.rs  product_repository.rs  stock_repository.rs  user_repository.rs
src/routes/: auth.rs  cart.rs  category.rs  image.rs  inventory.rs  mod.rs  order.rs  payment.rs  product.rs
src/services/: auth_service.rs  cart_service.rs  category_service.rs  image_service.rs  mod.rs  order_service.rs  payment_service.rs  product_service.rs
tests/: authz.rs  categories.rs  image.rs  integration_tests.rs  inventory.rs  order_tests.rs  payments.rs  routes.rs  smoke.rs  unit_tests.rs
tests/common/: mod.rs
