[package]
name = "hemp_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid", "migrate", "bigdecimal", "rust_decimal"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# Payment integration (stripe removed temporarily)
reqwest = { version = "0.12.23", features = ["json"] }

# Validation and error handling
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0.86"

# Additional utilities
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = { version = "0.5.2", features = ["timeout", "limit"] }
rust_decimal = { version = "1.32.0", features = ["serde-float"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
dotenvy = "0.15.7"
async-trait = "0.1.81"

# OpenAPI documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }


# Image upload and handling
cloudinary = "0.8.1"
tempfile = "3.8.1"
axum-swagger-ui = "0.3.0"

openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4.3"
tower = { version = "0.5.2", features = ["util"] }
axum-test = "18.1.0"
serde_json = "1.0.143"
hyper = { version = "1.0.0", features = ["full"] }
tower-service = "0.3.2"
scopeguard = "1.2.0"
